--- a/roles/jenkinsfile
+++ b/roles/jenkinsfile
@@ -5,7 +5,7 @@
       stage('SSH') {
         sh "apk add ansible sshpass"
         sh "rm -rf /root/.ssh"
-        sh "echo "172.17.13.237 app-salaire.thierry.form" > /etc/hosts"
+        sh "echo "172.17.13.237 app-salaire thierry.thierry cheguillaume.form" > /etc/hosts"
         sh "ssh-keygen -q -t rsa -N '' -f ~/.ssh/id_rsa"
         sh "sshpass -p 'Respons11' ssh-copy-id -o stricthostkeychecking=no root@173.17.13.237"
       }
